--- a/2506728_20241682_lathusan.ipynb
+++ b/2506728_20241682_lathusan.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvbcSe1n9aSufTkCJUZSAA",
+      "authorship_tag": "ABX9TyOL9x5vTd79s5pLkw7jpVej",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -487,7 +487,7 @@
       "cell_type": "code",
       "source": [
         "# Shape of the dataset\n",
-        "df.shape"
+        "df.shape\n"
       ],
       "metadata": {
         "colab": {
@@ -496,7 +496,7 @@
         "id": "czzN-g6Cjl9d",
         "outputId": "35d01d8d-eaf1-4b4c-9a6f-d447a3c1df09"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +525,7 @@
         "id": "o3V66uJCjovn",
         "outputId": "73963e26-2169-4145-8faa-96e801bc4c3f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +576,7 @@
         "id": "ZA2Vk1lHHcqX",
         "outputId": "94bbec20-8512-4114-bb2a-bb771d223b0c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,7 +599,7 @@
       "metadata": {
         "id": "phMsu9wNHgaL"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -615,7 +615,7 @@
         "id": "ykCFPWOuHkU-",
         "outputId": "07d253f1-743c-4dbc-997e-7e43036cbfa6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +639,7 @@
         "id": "uKAgOEQfsD4u",
         "outputId": "6bdfd302-cd3b-4ed4-9687-a5090c77b702"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +669,7 @@
         "id": "TxGzyr9NiL15",
         "outputId": "4f92a8d6-38da-454f-9a5b-55b155a40ca9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1015,7 +1015,7 @@
         "id": "ainK79t6iz88",
         "outputId": "693cd84f-653f-4729-fa1b-5df6f9ebc658"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1170,7 +1170,7 @@
       "metadata": {
         "id": "-feJU0vzmBPT"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1185,7 +1185,7 @@
         "id": "WF-R-Tl2nYNN",
         "outputId": "a5a1afec-084e-48d2-eccf-cf8ef9cf1e6e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1236,7 +1236,7 @@
         "id": "PqJUU7U6ocRQ",
         "outputId": "682ad67f-37f0-49fb-c9e9-ddcdc84ef292"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1396,7 +1396,7 @@
         "id": "fv7WsgvtwC2j",
         "outputId": "8bca894a-0e4f-4760-c6f0-1cc3a29c7110"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1468,7 +1468,7 @@
         "id": "Nklqbo_mwK1F",
         "outputId": "8c578dfe-1fec-472b-ddd5-e854a13655aa"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1505,7 +1505,7 @@
         "id": "S112Ezb_JcKW",
         "outputId": "9c9d18bd-8060-47cc-9524-3a96e11ed62f"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1542,7 +1542,7 @@
         "id": "zKLGwSNFK6sm",
         "outputId": "d8d66b48-d3f4-4d60-c306-3c34fcd1b3e5"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1579,7 +1579,7 @@
         "id": "SqV-2n0hK-gJ",
         "outputId": "6527f5ec-77bf-4ea4-d0a3-0461faa52531"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1622,7 +1622,7 @@
         "id": "mXfSg6N_McD6",
         "outputId": "9a90a177-ee5f-495c-f148-c8534bda0d34"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1652,7 +1652,7 @@
         "id": "cblJJqosPtTt",
         "outputId": "9f750906-dcfc-4107-fd5c-f818d91ef4c8"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1682,7 +1682,7 @@
         "id": "iAEpojYaVH3g",
         "outputId": "94328447-7afb-42eb-e7cd-2fe692ebed3c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1712,7 +1712,7 @@
         "id": "JdIGDjNrVKeL",
         "outputId": "b93ec2a6-203b-4446-d932-f1681eb717a3"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1748,7 +1748,7 @@
         "id": "kDrpzYhMVgap",
         "outputId": "da39a738-ecac-451a-d105-cc5b9c1f8131"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1781,7 +1781,7 @@
         "id": "wbXysJ97WFA1",
         "outputId": "ecac3443-7544-4cf5-c620-a20afc208db2"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1820,7 +1820,7 @@
       "metadata": {
         "id": "34PQontbEeKU"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1836,7 +1836,7 @@
         "id": "dl98CahpGoYN",
         "outputId": "6f4fb657-f25e-4fc3-e7eb-7879e4182384"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1861,7 +1861,20 @@
       "metadata": {
         "id": "AD6LdPgEEpQg"
       },
-      "execution_count": 27,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#balance the churn\n",
+        "!pip install imbalanced-learn\n",
+        "from imblearn.over_sampling import SMOTE"
+      ],
+      "metadata": {
+        "id": "3EzAeEnbUxW8"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1888,7 +1901,7 @@
       "metadata": {
         "id": "xczAIbzPJFcX"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1904,7 +1917,7 @@
         "id": "80piq_WSKo3V",
         "outputId": "530afae1-6444-436b-fcf9-6d3e3dc75b7a"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2400,7 +2413,7 @@
         "id": "bSr5gJVCK_o8",
         "outputId": "45673726-7fe2-4088-eb8b-e3584a16ba1c"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2423,7 +2436,7 @@
         "id": "v8NF-1pwLIN3",
         "outputId": "9766b020-fb6c-4bb5-d8b4-386dffdab469"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2464,7 +2477,7 @@
         "id": "iwndAYEHLP3N",
         "outputId": "0058fc54-0478-4035-be1a-ebfb995b3a93"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2495,7 +2508,7 @@
       "metadata": {
         "id": "8I8Kfp66fIY5"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2519,7 +2532,7 @@
       "metadata": {
         "id": "uptusFgtfL4H"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2536,7 +2549,7 @@
         "id": "jXT3SWfnftjC",
         "outputId": "730a2321-8341-4a87-f7ae-87cacf60d4ec"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3018,7 +3031,7 @@
       "metadata": {
         "id": "OeO97bxKf11x"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3048,7 +3061,7 @@
         "id": "lNBqjBVQf4CI",
         "outputId": "56e580aa-344f-4b69-f930-312b0710e3f2"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3112,7 +3125,7 @@
         "id": "SvJnoIIGf_oU",
         "outputId": "a057e584-5ae9-4c4c-f804-091ae70b09a9"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3642,7 +3655,7 @@
         "id": "ZL03KhcUk7df",
         "outputId": "25b98364-6664-48a6-841c-3a8aa84907f5"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
